new pages on privacy and terms add Google tag and verification code

--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,8 @@
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="SemiColonWeb" />
+    <meta name="google-site-verification" content="w0x7A9ssvvmZj71_6nXFWJ-isHKtftAhWg2VsBI_MiE" />
+
 
     <!-- Stylesheets
     ============================================= -->
@@ -70,10 +72,21 @@
         .tp-caption { white-space: nowrap; }
 
     </style>
+    <!-- Google Analytics -->
+<script>
+window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+ga('create', 'UA-77566239-1', 'auto');
+ga('send', 'pageview');
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+<!-- End Google Analytics -->
 
 </head>
 
+
 <body class="stretched">
+
+
 
     <!-- Document Wrapper
     ============================================= -->
